```toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-missions-simulator"
version = "0.1.0"
description = "Simulation engine for a custom Risk mission variant."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Infinitum3D" }
]
license = { text = "Proprietary" }
keywords = ["risk", "board game", "simulation", "ai"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
```
